<resources>
    <string name="app_name">GrooveJunkiesApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>



    <!--회원가입에 사용되는 string-->
    <string name="prompt_register_email">Email you want to use.</string>
    <string name="prompt_register_dance_name">Write your stage name.</string>
    <string name="prompt_password_first">password</string>
    <string name="prompt_password_second">password confirm</string>
    <string name="picture_label_text">Select your picture!</string>
    <string name="register_confirm">confirm!</string>
</resources>
