<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/junkies_logo"
                android:id="@+id/imageView4" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/textColor">

                <AutoCompleteTextView
                    android:id="@+id/email"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text=""
                    android:hint="@string/prompt_email"

                    android:textColor="@color/textColor"
                    android:layout_weight="1"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/textColor">

                <AutoCompleteTextView
                    android:id="@+id/password"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text=""
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:layout_weight="1"

                    android:textColor="@color/textColor"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/loginBtn"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:text="@string/action_sign_in"

                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:background="@drawable/trans_btn"
                />

            <Button
                android:id="@+id/registerBtn"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:text="@string/action_register"

                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:background="@drawable/trans_btn"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>