<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wooseoksong.groovejunkiesapp.LoginActivity"
    app:layout_collapseParallaxMultiplier="1.0"
    android:background="@color/backgroundDark">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@drawable/junkies_logo"
        android:id="@+id/imageView"
        android:layout_height="200dp" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textColor">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/textColor"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/textColor"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textColor">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:text="@string/action_sign_in"
                android:textColor="@color/textColor"
                android:textStyle="bold"

                android:shadowRadius="14"
                android:elevation="0dp"

                android:background="@drawable/trans_btn"/>

            <Button
                android:text="@string/action_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:background="@drawable/trans_btn"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"

                android:shadowRadius="14"
                android:id="@+id/register_button" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
