<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.wooseoksong.groovejunkiesapp.Activity.RegisterActivity"
    app:layout_collapseParallaxMultiplier="1.0"

    android:background="@color/backgroundDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/textColor">

                <AutoCompleteTextView
                    android:id="@+id/register_email"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/prompt_register_email"
                    android:textColor="@color/textColor"

                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/textColor">

            <AutoCompleteTextView
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/prompt_register_dance_name"

                android:textColor="@color/textColor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/textColor">

                <AutoCompleteTextView
                    android:id="@+id/register_password_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/prompt_password_first"

                    android:textColor="@color/textColor"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/textColor">

                <AutoCompleteTextView
                    android:id="@+id/register_password_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/prompt_password_second"

                    android:textColor="@color/textColor"
                    android:inputType="textPassword"/>

                <TextView
                    android:id="@+id/devide_line"
                    android:layout_width="match_parent"

                    android:background="@color/textColor"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:layout_height="5dp" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/picture_label"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:text="@string/picture_label_text"
                    android:textColor="@color/textColor"
                    android:textSize="20dp"
                    android:textAlignment="gravity"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="125dp">

                <ImageButton
                    android:layout_width="50sp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/add_photo_white"
                    android:id="@+id/imageButton"
                    android:layout_weight="1"
                    android:background="@color/transparancy" />

                <ImageView
                    android:id="@+id/user_picture_view"
                    android:layout_width="50sp"
                    android:layout_height="match_parent"

                    app:srcCompat="@mipmap/ic_launcher"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/register_confirm_btn"
                    android:text="@string/register_confirm"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/trans_btn"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />
            </LinearLayout>
            </LinearLayout>
    </ScrollView>
</LinearLayout>